<resources>
    <string name="app_name">Project_Live_ATP</string>
    <string name="valDefaultJ1">A.MURRAY</string>
    <string name="valDefaultJ2">J-W.TSONGA</string>
    <string name="valDefaultMainJ1">R.NADAL</string>
    <string name="valDefaultMainJ2">R.FEDERER</string>
    <string name="secondService">2eme service</string>
    <string name="let">LET</string>
    <string name="firstSet">1er set</string>
    <string name="secondSet">2e set</string>
    <string name="thirdSet">3e set</string>
    <string name="fourSet">4e set</string>
    <string name="fiveSet">5e set</string>
    <string name="out">OUT</string>
    <string name="filet">FILET</string>
    <string name="ace">ACE</string>
    <string name="challenge">CHALLENGE</string>
    <string name="valDefaultSet">0</string>
    <string name="valDefaultChallenge">0</string>
    <string name="valDefaultScore">00</string>
    <string name="valDefaultTournament">Open d\'Australie</string>
    <string name="valDefaultStateTournament">Quarts de finale</string>
    <string name="valDefaultDate">10 - 28 janvier 2018</string>
    <string name="cadratin">—</string>
    <string name="start">START</string>
    <string name="tieBreak">Tie-break</string>
    <string name="down">-</string>
    <string name="cancel">X</string>
    <string name="selectionService">Sélection du service pour le premier jeu de la partie :</string>
    <string name="login">Login :</string>
    <string name="password">Password :</string>
    <string name="admin">admin</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="advertissement">Advertissement</string>
    <string name="pause">Pause</string>
    <string name="modifPoint">Augmentation du score</string>
    <string name="service">Joueur possédant le service</string>
    <string name="nationality">Drapeau de nationalité</string>
    <string name="category">Double dames</string>
    <string name="player_win">PlayerWin</string>
    <string name="winner">WINNER :</string>
    <string name="endMatch">Fin du match</string>
    <string name="advantage">AV</string>
    <string name="startGame">00</string>
    <string name="toastAce">LE ACE A ETE COMPTABILISE</string>
    <string name="toastOut">LE OUT A ETE COMPTABILISE</string>
    <string name="toastNet">LE FILET A ETE COMPTABILISE</string>
    <string name="toast2ndService">LE 2eme SERVICE A ETE COMPTABILISE</string>
    <string name="toastLet">LE LET A ETE COMPTABILISE</string>
    <string name="fantasticTieBreak">Super Tie-break</string>
    <string name="reprise">Reprise</string>
    <string name="sanction1">RAPPEL A L\' ORDRE</string>
    <string name="sanction2">SANCTION JEU</string>
    <string name="sanction3">EXCLUSION MATCH</string>
    <string name="breakField">CHANGEMENT TERRAIN</string>
    <string name="breakSet">PAUSE SET</string>
    <string name="breakToilet">PAUSE TOILETTES</string>
    <string name="breakHeal">PAUSE SOIGNEURS</string>
    <string name="breakExceptional">PAUSE EXCEPTIONNELLE</string>
    <string name="breakAbort">ABANDON</string>
    <string name="valBreak">00:00</string>
    <string name="valBreakField">01:30</string>
    <string name="valBreakSet">02:00</string>
    <string name="valBreakToiletHeal">03:00</string>
    <string name="abort">ABANDON :</string>
    <string name="closeYes">OUI</string>
    <string name="closeNo">NON</string>
    <string name="closeVerif">Voulez-vous fermer votre session et perdre toutes les données du match ?</string>
</resources>
