<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pop_endOfMatch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <TextView
        android:id="@+id/textViewPlayerWin"
        android:layout_width="325dp"
        android:layout_height="110dp"
        android:layout_marginStart="476dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/player_win"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWin" />

    <TextView
        android:id="@+id/textViewWin"
        android:layout_width="214dp"
        android:layout_height="67dp"
        android:layout_marginStart="531dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/winner"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScorePlayerWin"
        android:layout_width="210dp"
        android:layout_height="160dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/valDefaultSet"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerWin" />

    <TextView
        android:id="@+id/textViewCadratin"
        android:layout_width="152dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/cadratin"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewScorePlayerWin"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerWin" />

    <TextView
        android:id="@+id/textViewPlayerLost"
        android:layout_width="210dp"
        android:layout_height="160dp"
        android:layout_marginEnd="320dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/valDefaultSet"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerWin" />

    <Button
        android:id="@+id/buttonEndMatch"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="488dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/flat_rectangle_red"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/endMatch"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScorePlayerWin" />
</android.support.constraint.ConstraintLayout>