<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pop_endOfMatch"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewPlayerWin"
        android:layout_width="325dp"
        android:layout_height="110dp"
        android:layout_marginStart="380dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/player_win"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWin"
        android:layout_width="215dp"
        android:layout_height="110dp"
        android:layout_marginEnd="376dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/win"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScorePlayerWin"
        android:layout_width="210dp"
        android:layout_height="160dp"
        android:layout_marginStart="325dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/valDefaultSet"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerWin" />

    <TextView
        android:id="@+id/textViewCadratin"
        android:layout_width="152dp"
        android:layout_height="160dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/cadratin"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewScorePlayerWin"
        app:layout_constraintTop_toBottomOf="@+id/textViewWin" />

    <TextView
        android:id="@+id/textViewPlayerLost"
        android:layout_width="210dp"
        android:layout_height="160dp"
        android:layout_marginEnd="325dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/valDefaultSet"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWin" />

    <Button
        android:id="@+id/buttonEndMatch"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="490dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/flat_rectangle_red"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/endMatch"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScorePlayerWin" />
</android.support.constraint.ConstraintLayout>